--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,22 @@ services:
       context: .
     volumes:
       - ./app:/app
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=supersecretpassword
+    depends_on:
+      - db
+  db:
+    image: postgres:10-alpine
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres #should be hidden for production
+      - POSTGRES_PASSWORD=supersecretpassword #should be hidden in environment in production
