--- a/.gitignore
+++ b/.gitignore
@@ -98,32 +98,12 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
-*.sage.py
-
 # Environments
 .env
-.venv
+.env-db
 env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+myvenv/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Ignore .idea files
+.idea/
 
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
